large-env/workspaces-template-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns${x}
  labels:
    app: scale-test
---
