large-env/fake-services-values.yaml
apiVersion: v1
kind: Service
metadata:
  name: details5
  labels:
    app: details
    service: details
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: details
