large-env/sample-apps-template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns${x}
  labels:
    istio-injection: enabled
    app: scale-test
---
apiVersion: v1
kind: Service
metadata:
  name: tcp-echo
  namespace: ns${x}
  labels:
    app: tcp-echo
    service: tcp-echo
spec:
  ports:
  - name: tcp
    port: 9000
  - name: tcp-other
    port: 9001
  # Port 9002 is omitted intentionally for testing the pass through filter chain.
  selector:
    app: tcp-echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-echo
  namespace: ns${x}
  labels:
    app: tcp-echo
spec:
  replicas: 0
  selector:
    matchLabels:
      app: tcp-echo
      version: v1
  template:
    metadata:
      labels:
        app: tcp-echo
        version: v1
    spec:
      containers:
      - name: tcp-echo
        image: docker.io/istio/tcp-echo-server:1.2
        imagePullPolicy: IfNotPresent
        args: [ "9000,9001,9002", "hello" ]
        ports:
        - containerPort: 9000
        - containerPort: 9001
---
