large-env/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage.ns1.svc.cluster.local
        port:
          number: 9080
      weight: 10
    - destination:
        host: productpage.ns2.svc.cluster.local
        port:
          number: 9080
      weight: 10
    - destination:
        host: productpage.ns3.svc.cluster.local
        port:
          number: 9080
      weight: 10
    - destination:
        host: productpage.ns4.svc.cluster.local
        port:
          number: 9080
      weight: 10
    - destination:
        host: productpage.ns5.svc.cluster.local
        port:
          number: 9080
      weight: 10
    - destination:
        host: productpage.ns6.svc.cluster.local
        port:
          number: 9080
      weight: 10
    - destination:
        host: productpage.ns7.svc.cluster.local
        port:
          number: 9080
      weight: 10
    - destination:
        host: productpage.ns8.svc.cluster.local
        port:
          number: 9080
      weight: 10
    - destination:
        host: productpage.ns9.svc.cluster.local
        port:
          number: 9080
      weight: 10
    - destination:
        host: productpage.ns10.svc.cluster.local
        port:
          number: 9080
      weight: 10
